--- a/src/app/submit/submit.page.html
+++ b/src/app/submit/submit.page.html
@@ -1,16 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Cronograma de Treino
-    </ion-title>
+    <ion-title>submit</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Treino</ion-title>
+      <ion-title size="large">submit</ion-title>
     </ion-toolbar>
   </ion-header>
-
 </ion-content>
