Atualização tela de Login e Cadastro

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,13 +1,19 @@
 *{
   
 }
+.corpo{
+  --background: #000000;
+  --overflow: hidden;
+}
 .container{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;/* Faz o elemento ocupar toda a altura do ion-content */
     text-align: center; 
-    width:100%;
+    width:100%;  
+    margin-top: 65px;
+    
 }
 ion-list{
     width: 90%;
@@ -95,7 +101,7 @@ ion-button {
     top:0%;
     left: 50%;
     margin-top: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
     transform: translate(-50%, -50%);
   }
   .text >p {
@@ -109,10 +115,13 @@ ion-button {
   .text1{
     position: relative;
     right: 10%;
+    color: #ffffff;
   }
   .text2{
     position: relative;
     left: 20%;
+    color: #ffffff;
+    
   }
 .efeitofundo{
   position: fixed;
@@ -123,7 +132,7 @@ ion-button {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 50%;
-  background-image: linear-gradient(to bottom, rgb(253, 0, 0), rgba(217, 11, 11, 0)); /* Vermelho para transparente */
+  background-image: linear-gradient(to bottom, rgb(253, 0, 0), rgba(217, 11, 11, 5)); /* Vermelho para transparente */
   
 }
 .efeitofundo::before {
