plus tela login e cadastro

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -24,7 +24,7 @@
       <ion-button expand="block" size="default"><ion-icon class="logo-google" name="logo-google"></ion-icon>Entrar com Google</ion-button>
 
       <ion-toolbar class="opcao">
-        <ion-text>Ainda não possui uma conta? <u>Cadastre-se</u></ion-text>
+        <ion-text>Ainda não possui uma conta? <u (click)="cadastrar()">Cadastre-se</u></ion-text>
       </ion-toolbar>
 
   </ion-list>
