--- a/src/app/submit/submit.page.html
+++ b/src/app/submit/submit.page.html
@@ -1,9 +1,3 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>submit</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true" class="corpo">
   
   <div class="efeitofundo"></div>
@@ -16,22 +10,21 @@
 
   
   <ion-list lines="none" style="background:none;">
+      <ion-input label="Nome Completo" label-placement="floating" [(ngModel)]="nome" fill="solid" placeholder="Digite seu nome completo" class="custom">
+      </ion-input>
+      <ion-input type= "number" label="Celular" label-placement="floating" [(ngModel)]="Cel" fill="solid" placeholder="(XX)XXXXX-XXXX" class="custom">
+      </ion-input>
       <ion-input label="E-mail" label-placement="floating" [(ngModel)]="email" fill="solid" placeholder="Digite seu e-mail" class="custom">
       </ion-input>
       <ion-input label="Senha" label-placement="floating" fill="solid" [(ngModel)]="senha" placeholder="Digite sua senha" class="custom">
       </ion-input>
-      <ion-toolbar>
-        <ion-text slot="end"><a [routerLink]="['/trocarsenha']" >Esqueceu a senha?</a></ion-text>
-      </ion-toolbar>
-      <ion-button class="botaoacessar" expand="block" size="default" >Acessar</ion-button>
+      <ion-button class="botaoacessar" expand="block" size="default" (click)="enviarcadastro()" >Cadastrar</ion-button>
       <ion-toolbar class="opcao">
         <ion-text>ou</ion-text>
       </ion-toolbar>
-      <ion-button expand="block" size="default"><ion-icon class="logo-google" name="logo-google"></ion-icon>Entrar com Google</ion-button>
+      <ion-button expand="block" size="default"><ion-icon class="logo-google" name="logo-google"></ion-icon>Cadastre com Google</ion-button>
 
-      <ion-toolbar class="opcao">
-        <ion-text>Ainda não possui uma conta? <u>Cadastre-se</u></ion-text>
-      </ion-toolbar>
+      
 
   </ion-list>
 </div>
