--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -5,8 +5,27 @@ ion-content{
     --background: #0000;
     --color: white;
 }
+ion-content > div{
+    
+}
 ion-item{
-    --background: red;
+    --background:#ff0000;
+    height: 50px;
     --color: black;
+    --padding:10px;
+    --border-radius: 0px 0px 15px 15px;
+    --border-style:none;
+}
+ion-select{
+    color:#fff
+}
+ion-col{
+    --ion-grid-column-padding:0px
+}
+ion-select{
     font-weight: bold;
 }
+ion-content {
+    --overflow: auto;  /* Ativa a barra de rolagem, se necessário */
+  }
+  
