--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,3 +1,76 @@
+ion-menu::part(backdrop) {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+ion-menu::part(container) {
+  border-radius: 0 20px 20px 0;
+
+  box-shadow: 4px 0px 16px rgba(0, 0, 0, 0.18);
+}
+
+.headerprincipal > ion-toolbar{
+  --background:#ff0000;
+  border-radius: 0px 0px 15px 15px;
+}
+.headerprincipal > ion-icon{
+  --background: #fff;
+  
+}
+ion-item{
+  --background: #ff0000;
+  --color: #fff;
+  --border-style: none;
+  --border-radius: 10px;
+  margin-bottom: 10px;
+  margin:10px
+}
+ion-item{
+  transition: transform 0.3s ease;
+}
+ion-item.active {
+  animation: pressAnimation 0.5s ease forwards;
+}
+@keyframes pressAnimation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/*Titulo principal "Perfil"*/
+.titleoffblack{
+  color:#fff;
+  font-size:20px;
+}
+/*ESTILIZAÇÃO DO MENU*/
+.headermenuopentoolbar{
+  --background: #ff0000;
+}
+.itemimgperfil{
+  position: relative; /* Contêiner de referência para centralização */
+  height: 200px; /* Defina uma altura fixa */
+  
+}
+.itensmenu{
+}
+.imgperfil{
+    position: absolute; /* Centralização absoluta */
+    top: 50%; /* Centraliza verticalmente */
+    left: 50%; /* Centraliza horizontalmente */
+    transform: translate(-50%, -50%); /* Move a imagem para o centro */
+    width: 150px;
+    height: 150px;
+    border-radius: 50%; /* Faz a imagem ficar redonda */
+    border: 1px solid #ff0000; 
+    object-fit: cover; /* Garante que a imagem se ajuste corretamente ao círculo */
+}
+
+/*Fim da estilização do menu*/
 ion-col {
     color: #000000;
     text-align: center;
@@ -35,11 +108,4 @@ ion-col {
   }
   ion-icon{
     color: #000;
-    
-  }
- 
- 
-  .header-top-page{
-    border-radius: 0px 0px 20px 20px;
-    --background:#d90b0b;
-  }
+  }  
