--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,43 +1,67 @@
 
-<ion-content [fullscreen]="true" style="background-color: black;">
+<ion-content [fullscreen]="true">
   <ion-item>
-    <ion-select label="Serie" label-placement="floating" [(ngModel)]="selectedOption" (ionChange)="onOptionChange()">
-      <ion-select-option value="serieA">Serie A</ion-select-option>
-      <ion-select-option value="serieB">Serie B</ion-select-option>
-      <ion-select-option value="serieC">Serie C</ion-select-option>
+    <ion-select label="Séries" color="white"  [(ngModel)]="selectedOption" (ionChange)="onOptionChange()">
+      <ion-select-option value="serieA" selected>Série A</ion-select-option>
+      <ion-select-option value="serieB">Série B</ion-select-option>
+      <ion-select-option value="serieC">Série C</ion-select-option>
     </ion-select>
   </ion-item>
   <div *ngIf="selectedOption === 'serieA'" class="serie">
     <ion-grid>
       <ion-row>
-        <ion-col col-6>Supino Reto com Barra</ion-col>
-        <ion-col col-3>4x 10 repetições</ion-col>
-        <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
+        <ion-col>
+        <app-card-treino
+          img="https://www.hipertrofia.org/blog/wp-content/uploads/2017/09/barbell-bench-press.gif"
+          title="Supino Reto com Barra"
+          subtitle="4x10"
+        ></app-card-treino>
+        </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col col-6>Supino Inclinado com Halteres</ion-col>
-        <ion-col col-3>4x 10 repetições</ion-col>
-        <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
+        <ion-col>
+          <app-card-treino
+            img="https://www.mundoboaforma.com.br/wp-content/uploads/2020/12/supino-inclinado-com-halteres.gif"
+            title="Supino Inclinado com Halteres"
+            subtitle="4x10"
+          ></app-card-treino>
+          </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col col-6>Crucifixo com Halteres</ion-col>
-        <ion-col col-3>3x 15 repetições</ion-col>
-        <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
+        <ion-col>
+          <app-card-treino
+            img="https://www.hipertrofia.org/blog/wp-content/uploads/2020/06/dumbbell-incline-fly.gif"
+            title="Crucifixo com Halteres"
+            subtitle="3x15"
+          ></app-card-treino>
+          </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col col-6>Triceps Pulley</ion-col>
-        <ion-col col-3>4x 10 repetições</ion-col>
-        <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
+        <ion-col>
+          <app-card-treino
+            img="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRk35k-oKpy-PQ2P0GwrJ__IeWu-OLZzONecA&s"
+            title="Triceps Pulley"
+            subtitle="4x10"
+          ></app-card-treino>
+          </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col col-6>Triceps Testa com Barra</ion-col>
-        <ion-col col-3>3x 10 repetições</ion-col>
-        <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
+        <ion-col>
+          <app-card-treino
+            img="https://www.blog.treinoemalta.com.br/wp-content/uploads/2023/07/Triceps-Pulley-Barra.gif"
+            title="Triceps Testa com Barra"
+            subtitle="3x10"
+          ></app-card-treino>
+        </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col col-6>Mergulho entre bancos</ion-col>
-        <ion-col col-3>3x 15 repetições</ion-col>
-        <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
+        <ion-col>
+          <app-card-treino
+            img="https://www.mundoboaforma.com.br/wp-content/uploads/2021/03/triceps-mergulho-apoiado-em-dois-bancos.gif"
+            title="Mergulho entre bancos"
+            subtitle="3x15 "
+          ></app-card-treino>
+        </ion-col>
       </ion-row>
     </ion-grid>
   </div>
@@ -45,17 +69,17 @@
     <ion-grid>
     <ion-row>
       <ion-col col-6>Puxada Aberta na Polia</ion-col>
-      <ion-col col-3>4x 10 repetições</ion-col>
+      <ion-col col-3>4x 10 </ion-col>
       <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-6>Remada Curvada com Barra</ion-col>
-      <ion-col col-3>4x 10 repetições</ion-col>
+      <ion-col col-3>4x 10 </ion-col>
       <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-6>Remada Unilateral com Halteres</ion-col>
-      <ion-col col-3>3x 12 repetições</ion-col>
+      <ion-col col-3>3x 12 </ion-col>
       <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
     </ion-row>
     <ion-row>
@@ -65,12 +89,12 @@
     </ion-row>
     <ion-row>
       <ion-col col-6>Rosca Direta com Barra</ion-col>
-      <ion-col col-3>4x 10 repetições</ion-col>
+      <ion-col col-3>4x 10 </ion-col>
       <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-6>Rosca concentrada com Halteres</ion-col>
-      <ion-col col-3>3x 15 repetições</ion-col>
+      <ion-col col-3>3x 15 </ion-col>
       <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
     </ion-row>
   </ion-grid>
@@ -79,37 +103,37 @@
     <ion-grid>
       <ion-row>
         <ion-col col-6>Agachamento Livre</ion-col>
-        <ion-col col-3>4x de 12 repetições</ion-col>
+        <ion-col col-3>4x de 12 </ion-col>
         <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-6>Legg Press</ion-col>
-        <ion-col col-3>4x de 12 repetições</ion-col>
+        <ion-col col-3>4x de 12 </ion-col>
         <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-6>Cadeira Extensora</ion-col>
-        <ion-col col-3>4x de 12 repetições</ion-col>
+        <ion-col col-3>4x de 12 </ion-col>
         <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-6>Flexora Deitada</ion-col>
-        <ion-col col-3>4x de 12 repetições</ion-col>
+        <ion-col col-3>4x de 12 </ion-col>
         <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-6>Elevação Lateral Com Halteres</ion-col>
-        <ion-col col-3>4x de 12 repetições</ion-col>
+        <ion-col col-3>4x de 12 </ion-col>
         <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-6>Desenvolvimento com Halteres</ion-col>
-        <ion-col col-3>4x de 12 repetições</ion-col>
+        <ion-col col-3>4x de 12 </ion-col>
         <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-6>Elevação Frontal com Halteres</ion-col>
-        <ion-col col-3>4x de 12 repetições</ion-col>
+        <ion-col col-3>4x de 12 </ion-col>
         <ion-col col-3><ion-checkbox></ion-checkbox></ion-col>
       </ion-row>
       <ion-row>
