criação de componente

--- a/src/app/components/card-treino/card-treino.component.html
+++ b/src/app/components/card-treino/card-treino.component.html
@@ -6,7 +6,11 @@
     <!-- Textos ao lado da imagem -->
     <div class="text-content">
       <ion-card-title><b>{{ title }}</b></ion-card-title>
-      <ion-button size="small">{{ subtitle }}</ion-button>
+      <div>
+        <ion-button class="serie" size="small">{{ serie }}</ion-button>
+        <ion-button class="tag" size="small">{{ tag }}</ion-button>
+      </div>
+      
     </div>
   </div>
 </ion-card>
