--- a/src/app/components/card-treino/card-treino.component.scss
+++ b/src/app/components/card-treino/card-treino.component.scss
@@ -8,14 +8,25 @@
     height: 100px;
     object-fit: cover;     /* Faz com que a imagem se ajuste sem distorção */
     margin-right: 16px;    /* Espaçamento entre a imagem e o texto */
+    --border-radius: 15px;   /* Arredonda as bordas */
   }
-  
+
+  ion-card ion-img.card-image {
+    border-radius: 15px;
+    /* Outros estilos... */
+  }
   .text-content {
     display: flex;
     flex-direction: column; /* Deixa os textos um abaixo do outro */
   }
-  ion-button{
+  .serie{
     --background:#f00000;
     --color:#fff;
-    max-width: 50px
+    max-width: 50px;
+    
+  }
+  .tag{
+    --background:#000000;
+    --color:#fff;
+    max-width: 85px
   }
