--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header class="headerprincipal" [translucent]="true">
   <ion-toolbar>
     <ion-title>
       Avaliação Nutricional
@@ -7,10 +7,14 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Avaliação Nutricional</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid [fixed]="true">
+    <ion-row>
+      <ion-col size="3"><app-card-alimentacao-dia></app-card-alimentacao-dia></ion-col>
+      <ion-col size="3"><app-card-alimentacao-dia></app-card-alimentacao-dia></ion-col>
+      <ion-col size="3"><app-card-alimentacao-dia></app-card-alimentacao-dia></ion-col>
+      <ion-col size="3"><app-card-alimentacao-dia></app-card-alimentacao-dia></ion-col>
+    </ion-row>
+  </ion-grid>
+  
 
 </ion-content>
