troca de API nutricional

--- a/src/app/components/card-alimentacao-dia/card-alimentacao-dia.component.html
+++ b/src/app/components/card-alimentacao-dia/card-alimentacao-dia.component.html
@@ -1,4 +1,4 @@
-<ion-card>
-  
+<ion-card slot="center" class="customcard">
+    <ion-icon [name]="nameicon" ></ion-icon>
 </ion-card>
-<ion-label>Jantar</ion-label>
+<ion-label class="label">{{alimentacao}}</ion-label>
