--- a/src/app/components/card-treino/card-treino.component.html
+++ b/src/app/components/card-treino/card-treino.component.html
@@ -7,8 +7,8 @@
     <div class="text-content">
       <ion-card-title><b>{{ title }}</b></ion-card-title>
       <div>
-        <ion-button class="serie" size="small">{{ serie }}</ion-button>
-        <ion-button class="tag" size="small">{{ tag }}</ion-button>
+        <ion-chip class="serie" size="small">{{ serie }}</ion-chip>
+        <ion-chip class="tag" size="small">{{ tag }}</ion-chip>
       </div>
       
     </div>
