--- a/src/app/components/card-alimentacao-dia/card-alimentacao-dia.component.scss
+++ b/src/app/components/card-alimentacao-dia/card-alimentacao-dia.component.scss
@@ -2,4 +2,25 @@ ion-card{
     width: 70px;
     height: 70px;
     border-radius:50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+ion-card > ion-icon{
+    font-size: 30px;
+    color:#fff;
+}
+.label{
+    color:#fff;
+    font-weight: bold;
+    font-size: 10px;
+}
+
+.customcard{
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.customcard:active {
+    transform: scale(1.1); /* Aumenta o card levemente */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Adiciona uma sombra mais pronunciada */
+  }
+ 
