--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -49,7 +49,7 @@
       <ion-row>
         <ion-col>
           <app-card-treino
-            img="https://www.blog.treinoemalta.com.br/wp-content/uploads/2023/07/Triceps-Pulley-Barra.gif"
+            img="https://www.mundoboaforma.com.br/wp-content/uploads/2021/07/triceps-puxada-no-pulley.gif"
             title="Triceps Pulley"
             serie="4x10"
             tag="Tríceps"
@@ -59,7 +59,7 @@
       <ion-row>
         <ion-col>
           <app-card-treino
-            img="https://www.blog.treinoemalta.com.br/wp-content/uploads/2023/07/Triceps-Pulley-Barra.gif"
+            img="https://www.hipertrofia.org/blog/wp-content/uploads/2024/02/barbell-lying-triceps-extension-skull-crusher.gif"
             title="Triceps Testa com Barra"
             serie="3x10"
             tag="Tríceps"
