Ajuste Design das Páginas

--- a/src/app/avaliacoes-fisica/avaliacoes-fisica.page.html
+++ b/src/app/avaliacoes-fisica/avaliacoes-fisica.page.html
@@ -1,15 +1,11 @@
 <ion-header class="headerprincipal" [translucent]="true">
   <ion-toolbar>
     <ion-back-button slot="start" defaultHref="goBackPage()" (click)="goBackPage()"></ion-back-button>
-    <ion-title>Cartões</ion-title>
+    <ion-title>Avaliações Física</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">gerenciaDeCartoes</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
 </ion-content>
