--- a/src/app/components/menu-lateral-atributos/menu-lateral-atributos.component.scss
+++ b/src/app/components/menu-lateral-atributos/menu-lateral-atributos.component.scss
@@ -5,7 +5,10 @@ ion-col {
     text-align: center;
     color: #fff;
   }
-  ion-card{
+  ion-card > ion-card-title, ion-card-subtitle{
+    padding-top: 15%;
+  }
+  ion-card {
     --background:#434B53;
     padding:-10px;
     width: 60px;
