--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-item slot="end">
+    <ion-item slot="end" class="ion-item-icon-perfil">
       <ion-icon name="person-circle"></ion-icon>
     </ion-item>
   </ion-toolbar>
@@ -35,16 +35,16 @@
       </div>
       <app-menu-lateral-atributos></app-menu-lateral-atributos>
       <ion-item href="../dados-pessoais/">
-        <ion-icon color="white" aria-hidden="true" name="person-circle-outline" slot="start"></ion-icon>
-        <ion-label>Dados pessoais</ion-label>
+        <ion-icon color="white" aria-hidden="true" name="person-circle" slot="start"></ion-icon>
+        <ion-label>Dados Pessoais</ion-label>
+      </ion-item>
+      <ion-item href="../avaliacoes-fisica/">
+        <ion-icon color="white" aria-hidden="true" name="body" slot="start"></ion-icon>
+        <ion-label>Avaliações Física</ion-label>
       </ion-item>
       <ion-item href="../gerencia-de-cartoes/">
         <ion-icon color="white" aria-hidden="true" name="card" slot="start"></ion-icon>
-        <ion-label>Avaliação física</ion-label>
-      </ion-item>
-      <ion-item href="../gerencia-de-cartoes/">
-        <ion-icon color="white" aria-hidden="true" name="card" slot="start"></ion-icon>
-        <ion-label>Gerenciar cartões</ion-label>
+        <ion-label>Gerenciar Cartões</ion-label>
       </ion-item>
       <ion-item href="../login/">
         <ion-icon color="white" aria-hidden="true" name="exit" slot="start"></ion-icon>
