--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,16 +1,9 @@
-<ion-header [translucent]="true">
+<ion-header class="headerprincipal" [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Pagamentos
-    </ion-title>
+    <ion-title>Pagamentos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Pagamentos</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+  
 </ion-content>
