--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,24 +1,24 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
+  <ion-tab-bar class="ion-tabs-content" slot="bottom">
+    <ion-tab-button class="ion-tab-button" tab="tab1" href="/tabs/tab1">
       <ion-icon name="analytics-outline"></ion-icon>
-      <ion-label>Dashboard</ion-label>
+    <!--<ion-label>Dashboard</ion-label>-->
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button class="ion-tab-button" tab="tab2" href="/tabs/tab2">
       <ion-icon name="barbell-outline"></ion-icon>
-      <ion-label>Treino</ion-label>
+      <!--<ion-label>Treino</ion-label>-->
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button class="ion-tab-button" tab="tab3" href="/tabs/tab3">
       <ion-icon name="nutrition"></ion-icon>
-      <ion-label>Nutrição</ion-label>
+      <!--<ion-label>Nutrição</ion-label>-->
     </ion-tab-button>
 
-    <ion-tab-button tab="tab4" href="/tabs/tab4">
+    <ion-tab-button class="ion-tab-button" tab="tab4" href="/tabs/tab4">
       <ion-icon name="card"></ion-icon>
-      <ion-label>Pagamento</ion-label>
+      <!--<ion-label>Pagamento</ion-label>-->
     </ion-tab-button>
     
   </ion-tab-bar>
