Criação de Componentes e estilização da tela de gerenciamento de cartoes e pagamentos

--- a/src/app/gerencia-de-cartoes/gerencia-de-cartoes.page.html
+++ b/src/app/gerencia-de-cartoes/gerencia-de-cartoes.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar>
     <ion-back-button slot="start" defaultHref="goBackPage()" (click)="goBackPage()"></ion-back-button>
     <ion-title>Cartões</ion-title>
+    <ion-icon slot="end" name="add-outline" class="ion-icon"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
@@ -12,4 +13,5 @@
       <ion-title size="large">gerenciaDeCartoes</ion-title>
     </ion-toolbar>
   </ion-header>
+  <app-card-pagamento-ger-cartao></app-card-pagamento-ger-cartao>
 </ion-content>
