--- a/src/app/gerencia-de-cartoes/gerencia-de-cartoes.page.scss
+++ b/src/app/gerencia-de-cartoes/gerencia-de-cartoes.page.scss
@@ -14,3 +14,8 @@ ion-toolbar {
     align-items: center;
     /* Centraliza verticalmente */
 }
+.ion-icon{
+    font-weight: bold;
+    margin-right: 10px;
+    font-size: 30px;
+}
